added staff activity report

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-	<h1>Staff Reports</h1>
+	<h2>Summary Reports</h2>
 
-	<a href="rfidcurrentcheckins.php">Current CheckIns</a><br><br>
+	<a href="rfidcurrentcheckinsWithMOD.php">Current CheckIns</a> ... or <a href="rfidcurrentcheckins.php">without MOD</a><br><br>
 
 	<a href="rfidcheckinlog.php">Last 200 CheckIns</a><br><br>
 
 	<a href="checkinreport.php">Members per Month/Day Summary</a><br><br>
+
+    <h2>Detail Reports</h2>
 
     <a href="checkinreportdetail.php">Members per Month, detail</a><br><br>
 
@@ -24,11 +26,16 @@
 
 	<a href="rfidlast100membersZZZ.php">Last 100 active members</a><br><br>
 
+    <h2>Staff Activity</h2>
+
+    <a href="rfidstaffactivity.php?startDate=20221001&endDate=20221031">Staff check in/out</a><br><br>
+    
+    <h2>Configuration Reports</h2>
+
 	<a href="rfidreportstaffmod.php">List all people with Staff or MOD</a><br><br>
 
+	<h2>System Debug Reports</h2>
 
-
-	<h1>System Debug Reports</h1>
 	<a href="rfidclientactivity.php">Activity by Client</a><br><br>
 
 	<a href="rfiddevicelog.php">Log by Device</a><br><br>
