Home page uses lists now

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -10,40 +10,40 @@
 </head>
 
 <body>
-	<h2>Summary Reports</h2>
-
-	<a href="rfidcurrentcheckinsWithMOD.php">Current CheckIns</a> ... or <a href="rfidcurrentcheckins.php">without MOD</a><br><br>
-
-	<a href="rfidcheckinlog.php">Last 200 CheckIns</a><br><br>
-
-	<a href="checkinreport.php">Members per Month/Day Summary</a><br><br>
-
-    <h2>Detail Reports</h2>
-
-    <a href="checkinreportdetail.php">Members per Month, detail</a><br><br>
-
-	<a href="rfidonemember.php?clientID=21613660">Report on One Client (modify URL)</a><br><br>
-
-	<a href="rfidlast100membersZZZ.php">Last 100 active members</a><br><br>
-
-    <h2>Staff Activity</h2>
-
-    <a href="rfidstaffactivity.php?startDate=20221001&endDate=20221031">Staff check in/out</a><br><br>
+    <h2>RFID database reports</h2>
     
-    <h2>Configuration Reports</h2>
+	<h3>Summary Reports</h3>
+    <ul>
+	    <li><a href="rfidcurrentcheckinsWithMOD.php">Current CheckIns</a>
+            ... or <a href="rfidcurrentcheckins.php">without MOD</a>
+        <li><a href="rfidcheckinlog.php">Last 200 CheckIns</a>
+        <li><a href="checkinreport.php">Members per Month/Day Summary</a>
+    </ul>
 
-	<a href="rfidreportstaffmod.php">List all people with Staff or MOD</a><br><br>
+    <h3>Detail Reports</h3>
+    <ul>
+        <li><a href="checkinreportdetail.php">Members per Month, detail</a>
+	    <li><a href="rfidonemember.php?clientID=21613660">Report on One Client (modify URL)</a>
+	    <li><a href="rfidlast100membersZZZ.php">Last 100 active members</a>
+    </ul>
 
-	<h2>System Debug Reports</h2>
+    <h3>Staff Activity</h3>
+    <ul>
+        <li><a href="rfidstaffactivity.php?startDate=20221001&endDate=20221031">Staff check in/out</a>
+    </ul>
 
-	<a href="rfidclientactivity.php">Activity by Client</a><br><br>
+    <h3>Configuration Reports</h3>
+    <ul>
+	    <li><a href="rfidreportstaffmod.php">List all people with Staff or MOD</a>
+    </ul>
 
-	<a href="rfiddevicelog.php">Log by Device</a><br><br>
-
-	<a href="rfidtop100.php">Last 100 Raw Data</a><br><br>
-
-    <a href="rfidcheckindebugactivity.php">Overall logging counts</a><br><br>
-
+	<h3>System Debug Reports</h3>
+    <ul>
+	    <li><a href="rfidclientactivity.php">Activity by Client</a>
+	    <li><a href="rfiddevicelog.php">Log by Device</a>
+	    <li><a href="rfidtop100.php">Last 100 Raw Data</a>
+        <li><a href="rfidcheckindebugactivity.php">Overall logging counts</a>
+    </ul>
 
 
 
