new reports on studio usage, heatmap

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -18,6 +18,7 @@
             ... or <a href="rfidcurrentcheckins.php">without MOD</a>
         <li><a href="rfidcheckinlog.php">Last 200 CheckIns</a>
         <li><a href="checkinreport.php">Members per Month/Day Summary</a>
+        <li><a href="rfidstudiousage.php?startDate=20220515&endDate=20221231">Studio Usage</a></li>
     </ul>
 
     <h3>Detail Reports</h3>
@@ -25,6 +26,7 @@
         <li><a href="checkinreportdetail.php">Members per Month, detail</a>
 	    <li><a href="rfidonemember.php?clientID=21613660">Report on One Client (modify URL)</a>
 	    <li><a href="rfidlast100membersZZZ.php">Last 100 active members</a>
+        <li><a href="rfidshopusagebyhour.php?startDate=20211102&endDate=20221103">Usage Heat Map</a></li>
     </ul>
 
     <h3>Staff Activity</h3>
@@ -43,6 +45,7 @@
 	    <li><a href="rfiddevicelog.php">Log by Device</a>
 	    <li><a href="rfidtop100.php">Last 100 Raw Data</a>
         <li><a href="rfidcheckindebugactivity.php">Overall logging counts</a>
+        <li><a href="rfidstudiousagedenied.php?startDate=20220515&endDate=20221231">Studio Usage Denied</a></li>
     </ul>
 
 
