Feat: display for woodshop tap ins

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -12,10 +12,15 @@
 <body>
     <h2>RFID database reports</h2>
 
-	<h3>Summary Reports</h3>
+	<h3>Updating Displays</h3>
     <ul>
 	    <li><a href="rfidcurrentcheckinsWithMOD.php">Current CheckIns</a>
             ... or <a href="rfidcurrentcheckins.php">without MOD</a>
+        <li><a href="rfidcurrentstudio.php?studio=wood">Active In Woodshop</a>
+    </ul>
+
+    <h3>Summary Reports</h3>
+    <ul>        
         <li><a href="rfidcheckinlog.php">Last 200 CheckIns</a>
         <li><a href="checkinreport.php">Members per Month/Day Summary</a>
         <li><a href="rfidstudiousage.php?startDate=20220701&endDate=20231231">Studio Usage</a></li>
