--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -51,6 +51,8 @@
 	    <li><a href="rfidtop100.php">Last 100 Raw Data</a>
         <li><a href="rfidcheckindebugactivity.php">Overall logging counts</a>
         <li><a href="rfidstudiousagedenied.php?startDate=20220515&endDate=20221231">Studio Usage Denied</a></li>
+        <li><a href="https://rfid.makernexuswiki.com/rfiddeniedanyreason.php">Denied for Any Reason</a></li>
+   
     </ul>
 
 
