added 14 day lookback to staff report

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -36,7 +36,8 @@
 
     <h3>Staff Activity</h3>
     <ul>
-        <li><a href="rfidstaffactivity.php?startDate=20230101&endDate=20231231">Staff check in/out</a>
+        <li><a href="rfidstaffactivity.php">Staff check in/out, 14 day lookback</a>
+        <li><a href="rfidstaffactivity.php?startDate=20230101&endDate=20231231">Staff check in/out with date range</a>
     </ul>
 
     <h3>Configuration Reports</h3>
