--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -23,21 +23,21 @@
     <ul>        
         <li><a href="rfidcheckinlog.php">Last 200 CheckIns</a>
         <li><a href="checkinreport.php">Members per Month/Day Summary</a>
-        <li><a href="rfidstudiousage.php?startDate=20220701&endDate=20231231">Studio Usage</a></li>
+        <li><a href="rfidstudiousage.php?startDate=&endDate=">Studio Usage</a></li>
     </ul>
 
     <h3>Detail Reports</h3>
     <ul>
         <li><a href="checkinreportdetail.php">Members per Month, detail</a>
-	    <li><a href="rfidonemember.php?clientID=21613660">Report on One Client (modify URL)</a>
+	    <li><a href="rfidonemember.php?clientID=59617641">Report on One Client (modify URL)</a>
 	    <li><a href="rfidlast100membersZZZ.php">Last 100 active members</a>
-        <li><a href="rfidshopusagebyhour.php?startDate=20220701&endDate=20231231">Usage Heat Map</a></li>
+        <li><a href="rfidshopusagebyhour.php?startDate=20230101&endDate=20241231">Usage Heat Map</a></li>
     </ul>
 
     <h3>Staff Activity</h3>
     <ul>
         <li><a href="rfidstaffactivity.php">Staff check in/out, 14 day lookback</a>
-        <li><a href="rfidstaffactivity.php?startDate=20230101&endDate=20231231">Staff check in/out with date range</a>
+        <li><a href="rfidstaffactivity.php?startDate=20230901&endDate=20241231">Staff check in/out with date range</a>
     </ul>
 
     <h3>Configuration Reports</h3>
@@ -51,7 +51,7 @@
 	    <li><a href="rfiddevicelog.php">Log by Device</a>
 	    <li><a href="rfidtop100.php">Last 100 Raw Data</a>
         <li><a href="rfidcheckindebugactivity.php">Overall logging counts</a>
-        <li><a href="rfidstudiousagedenied.php?startDate=20220515&endDate=20221231">Studio Usage Denied</a></li>
+        <li><a href="rfidstudiousagedenied.php?startDate=20220515&endDate=20241231">Studio Usage Denied</a></li>
         <li><a href="https://rfid.makernexuswiki.com/rfiddeniedanyreason.php">Denied for Any Reason</a></li>
    
     </ul>
