form is working

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -20,6 +20,7 @@
     <META NAME="Author" CONTENT="">
     <META NAME="Keywords" CONTENT="">
     <META NAME="Description" CONTENT="">
+    <script src="/OVLcheckinout.js"></script>
 </HEAD>
 
 <BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#800080" ALINK="#FF0000">
