working. needs more comments and refactoring

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -44,13 +44,13 @@
             </TR>
             <TR>
                 <TD ALIGN="RIGHT">Visit Reason:</TD>
-                <TD><label><input type="checkbox" name="visitReason" value="tour"> Tour</label><br>
-                    <label><input type="checkbox" name="visitReason" value="classOrworkshop"> Class or Workshop</label><br>
-                    <label><input type="checkbox" name="visitReason" value="makernexusevent"> Maker Nexus Event</label><br>
-                    <label><input type="checkbox" name="visitReason" value="volunteering"> Volunteering</label><br>   
-                    <label><input type="checkbox" name="visitReason" value="guest"> Guest of a member</label><br>
-                    <label><input type="checkbox" name="visitReason" value="forgotbadge"> Member, forgot badge</label><br>
-                    <label><input type="checkbox" name="visitReason" value="other"> Other</label><br>
+                <TD><label><input type="checkbox" name="visitReason[]" value="tour"> Tour</label><br>
+                    <label><input type="checkbox" name="visitReason[]" value="classOrworkshop"> Class or Workshop</label><br>
+                    <label><input type="checkbox" name="visitReason[]" value="makernexusevent"> Maker Nexus Event</label><br>
+                    <label><input type="checkbox" name="visitReason[]" value="volunteering"> Volunteering</label><br>   
+                    <label><input type="checkbox" name="visitReason[]" value="guest"> Guest of a member</label><br>
+                    <label><input type="checkbox" name="visitReason[]" value="forgotbadge"> Member, forgot badge</label><br>
+                    <label><input type="checkbox" name="visitReason[]" value="other"> Other</label><br>
             </TR>
             <TR>
                 <TD ALIGN="RIGHT">I have already completed a liability waiver:</TD>
