--- a/Software/Facility_Database_SW/datalogging/v1/OVLindex.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLindex.html
@@ -17,6 +17,27 @@
     <a href="OVLcheckinout.php?vid=20" target="_blank">QR code vid=20, currently Greg Yamanishi</a><br>
     <a href="OVLcheckinout.php?vid=54" target="_blank">QR code vid=54, currently Bob Glicksman</a><br>
 
+    <div>
+        <h3>Some sample QR codes</h3>
+        <div style="float:left; margin-right: 75px;">
+            <img src="QRVID39nogood.png"/>
+            <br>vid 39, no good
+        </div>
+        <div style="float:left; margin-right: 75px;">
+            <img src="QRVID7jimschrempp.png"/>
+            <br>vid 7, Jim Schrempp
+        </div>
+        <div style="float:left; margin-right: 75px;">
+            <img src="QRVID20gregyamanishi.png"/>
+            <br>vid 20, Greg Yamanishi
+        </div>
+        <div style="float:left; margin-right: 75px;">
+            <img src="QRVID54bobglicksman.png"/>
+            <br>vid 54, Bob Glicksman
+        </div>
+    </div>
+    
+
 </body>
 
 </html>
