tuning up for mobile

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -121,16 +121,16 @@
                 margin-top:20px;
             }
             input {
-                font-size: 32px;
+                font-size: 50px;
+            }
+            textarea {
+                font-size: 50px;
             }
             p{
                 font-size: 50px;
             }
             label{
                 font-size: 50px;
-            }
-            td{
-                font-size: 32px;
             }
             input[type="checkbox"] {
                 transform: scale(2);
@@ -164,8 +164,8 @@
             
             <h1 class="topheading">Maker Nexus Visitor Log</h1>
             <p>In case of an emergency, it is important for us to know who is in the building at any given time.</p>
-            <p>Please complete the form. When done we will print you a namebagde. Please wear the 
-                namebadge while you are in the makerspace.
+            <p>Please complete the form. When done we will print you a name bagde. Please wear the 
+                name badge while you are in the makerspace.
             </p>
             <p>When you leave, use the QR code on your badge to checkout.</p>
         </div>
@@ -212,20 +212,18 @@
                 How did you hear about Maker Nexus?</TD>
             </div>
             <div  class="inputfield">
-               <INPUT TYPE="TEXT" NAME="howdidyouhear" SIZE="128" MAXLENGTH="128">
+               <TEXTAREA NAME="howdidyouhear" ROWS=2 COLS=40 MAXLENGTH="128"></TEXTAREA>
             </div>
             <div class= "fieldtitle">
                 <INPUT TYPE="SUBMIT" VALUE="Check In">
             </div>
         </FORM>
         <div class="fieldtitle" style="margin-bottom: 50px;">
-            Thank you for checking in.  Please wear your namebadge while you are in the makerspace.
+            Please wear your name badge while you are in the makerspace.
         </div>
     </div>
 
 
 </BODY>
-
-
 
 </HTML>
