--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -164,7 +164,7 @@
             
             <h1 class="topheading">Maker Nexus Visitor Log</h1>
             <p>In case of an emergency, it is important for us to know who is in the building at any given time.</p>
-            <p>Please complete the form. When done we will print you a name bagde. Please wear the 
+            <p>Please complete the form. When done we will print you a name badge. Please wear the 
                 name badge while you are in the makerspace.
             </p>
             <p>When you leave, use the QR code on your badge to checkout.</p>
