"how did you hear about us" is now added to database

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -214,7 +214,7 @@
                 How did you hear about Maker Nexus?</TD>
             </div>
             <div  class="inputfield">
-               <TEXTAREA NAME="howdidyouhear" ROWS=2 COLS=40 MAXLENGTH="128" VLAUE=""></TEXTAREA>
+               <TEXTAREA NAME="howDidYouHear" ROWS=2 COLS=40 MAXLENGTH="128" VLAUE=""></TEXTAREA>
             </div>
             <div class= "fieldtitle">
                 <INPUT TYPE="SUBMIT" VALUE="Check In">
