redirect to online waiver is working

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -200,7 +200,7 @@
                 <div class="visitreasoncheckbox" ><label><input type="checkbox" name="visitReason[]" value="other"> Other</label></div>
             </div>
             <div class= "fieldtitle">
-                I have already completed a liability waiver:
+                I have already signed a liability waiver:
             </div>
             <div  class="inputfield">
                 <div style="float:left; margin-left: 40px; ">
