liability waiver wording is stronger

--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -91,7 +91,7 @@
                 <div class="visitreasoncheckbox" ><label><input type="checkbox" name="visitReason[]" value="other"> Other</label></div>
             </div>
             <div class= "fieldtitle">
-                I have already signed a liability waiver:
+                I certify that all members of my party have a signed a liability waiver on file:
             </div>
             <div  class="inputfield">
                 <div style="float:left; margin-left: 40px; ">
