--- a/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
+++ b/Software/Facility_Database_SW/datalogging/v1/OVLcheckinout.html
@@ -3,13 +3,15 @@
     This is the HTML form for the OVL check in/out page.  It is a simple form that collects the following information:
     - First Name
     - Last Name
+    - Email Address
+    - Additional People in the party (intended to cover minors and other family members)
     - Visit Reason
     - Liability Waiver
     - How did you hear about Maker Nexus?
     
     The form is submitted to OVLcheckinout.php, which processes the form and writes the data to the database.
 
-    created: 2024-01-10
+    created: 2024-02-04
     by: Jim Schrempp
     copyright Maker Nexus:
         This work is licensed under a Attribution/Share Alike/Non Commercial (cc) 2024 Maker Nexus
