--- a/Software/Facility_Database_SW/datalogging/index.html
+++ b/Software/Facility_Database_SW/datalogging/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="robots" content="noindex, nofollow">
   <title>RFID Reports</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
