Small changes to improve SQL performance

--- a/Software/Facility_Database_SW/datalogging/rfidhome.html
+++ b/Software/Facility_Database_SW/datalogging/rfidhome.html
@@ -20,6 +20,11 @@
         <li><a href="rfidcurrentstudio.php?studio=wood">Active In Woodshop</a>
     </ul>
 
+    <h3>Online Visitor Log</h3>
+    <ul>
+	    <li><a href="https://rfid.makernexuswiki.com/v2/OVLrecentvisitors.php">Last 5 days of visitors</a>
+    </ul>
+
     <h3>Summary Reports</h3>
     <ul>        
         <li><a href="rfidcheckinlog.php">Last 200 CheckIns</a>
