--- a/Software/Facility_Database_SW/datalogging/index.html
+++ b/Software/Facility_Database_SW/datalogging/index.html
@@ -15,6 +15,7 @@
 
 	<a href="rfidcurrentcheckins.php">Current CheckIns</a><br><br>
     <a href="rfidcurrentcheckinsWithMOD.php">Current CheckIns With MOD</a><br><br>
+    <a href="rfidlast100members.php">Last 100 Members</a><br><br>
 
 </body>
 
